--- a/.github/workflows/update-deploy-prs.yaml
+++ b/.github/workflows/update-deploy-prs.yaml
@@ -32,13 +32,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main # Ensure we check out the code from main
+          path: main-branch
 
       - name: Build Manifests (${{ matrix.environment }})
         run: |
           curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
           alias kustomize=$(pwd)/kustomize
-          ./scripts/build.sh ${{ matrix.environment }} ${{ env.KUBE_VERSION }}
+          ./main-branch/scripts/build.sh ${{ matrix.environment }} ${{ env.KUBE_VERSION }}
 
-      - name: Create Pull Request (${{ matrix.environment }})
-        uses: peter-evans/create-pull-request@v7.0.8
+      - name: Checkout deploy/${{ matrix.environment }} branch code
+        uses: actions/checkout@v4
         with:
+          ref: deploy/${{ matrix.environment }}
+          path: deploy-${{ matrix.environment }}-branch
+
+      # - name: Create Pull Request (${{ matrix.environment }})
+      #   uses: peter-evans/create-pull-request@v7.0.8
+      #   with:
