--- a/.github/workflows/update-deploy-prs.yaml
+++ b/.github/workflows/update-deploy-prs.yaml
@@ -49,8 +49,9 @@ jobs:
 
       - name: Check
         run: |
-          ls -alh ${{ matrix.environment }}-branch
+          cp -r main-branch/build${{ matrix.environment }}/* ${{ matrix.environment }}-branch/
 
-      # - name: Create Pull Request (${{ matrix.environment }})
-      #   uses: peter-evans/create-pull-request@v7.0.8
-      #   with:
+      - name: Create Pull Request (${{ matrix.environment }})
+        uses: peter-evans/create-pull-request@v7.0.8
+        with:
+          path: ${{ matrix.environment }}-branch
