--- a/.github/workflows/update-deploy-prs.yaml
+++ b/.github/workflows/update-deploy-prs.yaml
@@ -47,8 +47,9 @@ jobs:
           ref: deploy/${{ matrix.environment }}
           path: ${{ matrix.environment }}-branch
 
-      - name: Check
+      - name: Copy Build Output
         run: |
+          rm -rf ${{ matrix.environment }}-branch/*
           cp -r main-branch/build/${{ matrix.environment }}/* ${{ matrix.environment }}-branch/
 
       - name: Create Pull Request (${{ matrix.environment }})
