--- a/.github/workflows/update-deploy-prs.yaml
+++ b/.github/workflows/update-deploy-prs.yaml
@@ -60,4 +60,4 @@ jobs:
           path: ${{ matrix.environment }}-branch
           branch: build/${{ matrix.environment }}
           delete-branch: true
-          commit-message: "[main $(/usr/bin/git rev-parse --short HEAD)] -> [build/${{ matrix.environment }}]"
+          commit-message: "[main ${{ github.sha }}] -> [build/${{ matrix.environment }}]"
