--- a/src/production/production-only-app/deployment.yaml
+++ b/src/production/production-only-app/deployment.yaml
@@ -18,4 +18,4 @@ spec:
         - name: production-only-app
           image: production-only-app:1.0.0
           ports:
-            - containerPort: 80222677878
+            - containerPort: 8080
