--- a/argocd/base/ingress-nginx.yaml
+++ b/argocd/base/ingress-nginx.yaml
@@ -1,19 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: production-only-app
+  name: ingress-nginx
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://github.com/myorg/gitops-argocd.git
-    targetRevision: deploy/production
-    path: production-only-app
+    repoURL: https://github.com/cmpx575/gitops-argocd.git
+    targetRevision: null # will be patched
+    path: ingress-nginx
   destination:
     server: https://kubernetes.default.svc
-    namespace: production-only-app
+    namespace: ingress-nginx
   syncPolicy:
     automated:
       allowEmpty: true
