--- a/argocd/staging/staging-only-app.yaml
+++ b/argocd/staging/staging-only-app.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/myorg/gitops-argocd.git
+    repoURL: https://github.com/cmpx575/gitops-argocd.git
     targetRevision: deploy/staging
     path: staging-only-app
   destination:
