--- a/argocd/production/app-of-apps.yaml
+++ b/argocd/production/app-of-apps.yaml
@@ -7,26 +7,26 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
-  sources:
+  source:
     # base
-    - repoURL: https://github.com/cmpx575/gitops-argocd.git
-      targetRevision: main
-      path: argocd/base
-      kustomize:
-        patches:
-          - target:
-              kind: Application
-              namespace: argocd
-            patch: |-
-              - op: replace
-                path: /spec/source/targetRevision
-                value: deploy/production
-    # production-specific
-    - repoURL: https://github.com/cmpx575/gitops-argocd.git
-      targetRevision: main
-      path: argocd/production
-      directory:
-        exclude: app-of-apps.yaml
+    repoURL: https://github.com/cmpx575/gitops-argocd.git
+    targetRevision: main
+    path: argocd/base
+    kustomize:
+      patches:
+        - target:
+            kind: Application
+            namespace: argocd
+          patch: |-
+            - op: replace
+              path: /spec/source/targetRevision
+              value: deploy/production
+    # # production-specific
+    # - repoURL: https://github.com/cmpx575/gitops-argocd.git
+    #   targetRevision: main
+    #   path: argocd/production
+    #   directory:
+    #     exclude: app-of-apps.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
